downgrade to 1.14, add sign + send

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -9,5 +9,7 @@ reqwest = { version = "0.11.20", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 jupiter-swap-api = { path = "../jupiter-swap-api" }
 solana-sdk = { workspace = true }
+solana-client = { workspace = true }
 serde_urlencoded = "0.7"
 serde_qs = "0.12.0"
+bincode = "1.3.3"
