--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -5,11 +5,8 @@ description = ""
 edition = { workspace = true }
 
 [dependencies]
-reqwest = { version = "0.11.20", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
-jupiter-swap-api = { path = "../jupiter-swap-api" }
+jupiter-swap-api-client = { path = "../jupiter-swap-api-client" }
 solana-sdk = { workspace = true }
 solana-client = { workspace = true }
-serde_urlencoded = "0.7"
-serde_qs = "0.12.0"
 bincode = "1.3.3"
