--- a/jupiter-swap-api-client/Cargo.toml
+++ b/jupiter-swap-api-client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jupiter-swap-api"
+name = "jupiter-swap-api-client"
 version = "0.1.0"
 description = ""
 edition = { workspace = true }
@@ -10,3 +10,5 @@ serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
 solana-sdk = { workspace = true }
 base64 = "0.13.1"
+serde_qs = "0.12.0"
+reqwest = { version = "0.11.20", features = ["json"] }
