--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ members = [
 edition = "2021"
 
 [workspace.dependencies]
-solana-sdk = "1.14.23"
-solana-client = "1.14.23"
+solana-sdk = ">=1.14.23"
+solana-client = ">=1.14.23"
