--- a/jupiter-swap-api-client/Cargo.toml
+++ b/jupiter-swap-api-client/Cargo.toml
@@ -12,3 +12,4 @@ solana-sdk = { workspace = true }
 base64 = "0.13.1"
 serde_qs = "0.12.0"
 reqwest = { version = "0.11.20", features = ["json"] }
+tokio = {version = "1.37.0"}
