--- a/jupiter-swap-api-client/Cargo.toml
+++ b/jupiter-swap-api-client/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "jupiter-swap-api-client"
 version = "0.1.0"
-description = ""
+description = "Jupiter Swap API rust client"
 edition = { workspace = true }
 
 [dependencies]
