--- a/jupiter-swap-api-client/Cargo.toml
+++ b/jupiter-swap-api-client/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "jupiter-swap-api-client"
 version = "0.1.0"
-description = ""
+description = "Jupiter Swap API rust client"
 edition = { workspace = true }
 
 [dependencies]
@@ -9,6 +9,9 @@ anyhow = "1"
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
 solana-sdk = { workspace = true }
-base64 = "0.13.1"
-serde_qs = "0.12.0"
-reqwest = { version = "0.11.20", features = ["json"] }
+base64 = "0.22.1"
+serde_qs = "0.13.0"
+# Not using reqwest 0.12 for now due to zeroize dep conflicts
+reqwest = { version = "0.11.27", features = ["json"] }
+jupiter-amm-interface = "0.4.5"
+rust_decimal = "1.36.0"
