--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ members = [
 edition = "2021"
 
 [workspace.dependencies]
-solana-sdk = "=1.18"
-solana-client = "=1.18"
-solana-account-decoder = "=1.18"
+solana-sdk = "~1.18"
+solana-client = "~1.18"
+solana-account-decoder = "~1.18"
