--- a/jupiter-swap-api-client/Cargo.toml
+++ b/jupiter-swap-api-client/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
 solana-sdk = { workspace = true }
 solana-account-decoder = { workspace = true }
+thiserror = "2"
 base64 = "0.22.1"
 serde_qs = "0.13.0"
 reqwest = { version = "0.11.27", features = ["json"] }
