--- a/jupiter-swap-api-client/Cargo.toml
+++ b/jupiter-swap-api-client/Cargo.toml
@@ -10,7 +10,8 @@ serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
 solana-sdk = { workspace = true }
 solana-account-decoder = { workspace = true }
+thiserror = "2"
 base64 = "0.22.1"
 serde_qs = "0.13.0"
-reqwest = { version = "0.11.27", features = ["json"] }
+reqwest = { version = "0.12", features = ["json"] }
 rust_decimal = "1.36.0"
