--- a/jupiter-swap-api-client/Cargo.toml
+++ b/jupiter-swap-api-client/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 description = "Jupiter Swap API rust client"
 edition = { workspace = true }
 
+[features]
+default = ["default-tls"]
+default-tls = ["reqwest/default-tls"]
+rustls-tls = ["reqwest/rustls-tls"]
+
 [dependencies]
 anyhow = "1"
 serde = { version = "1.0.159", features = ["derive"] }
@@ -13,5 +18,8 @@ solana-account-decoder = { workspace = true }
 thiserror = "2"
 base64 = "0.22.1"
 serde_qs = "0.13.0"
-reqwest = { version = "0.12", features = ["json"] }
 rust_decimal = "1.36.0"
+
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
