--- a/jupiter-swap-api-client/Cargo.toml
+++ b/jupiter-swap-api-client/Cargo.toml
@@ -18,4 +18,4 @@ rust_decimal = "1.36.0"
 reqwest-middleware = "0.4"
 async-trait = "0.1.83"
 tokio = { version = "1", features = ["full"] }
-task-local-extensions = "0.1.4"
+http = "1.2"
