--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,13 @@ members = [
     "jupiter-swap-api-client",
     "example",
 ]
+resolver = "2"
 
 [workspace.package]
 edition = "2021"
+rust-version = "1.80.0"
 
 [workspace.dependencies]
-solana-sdk = "~2.0"
-solana-client = "~2.0"
-solana-account-decoder = "~2.0"
+solana-sdk = "~2.1.13"
+solana-client = "~2.1.13"
+solana-account-decoder = "~2.1.13"
