update to solana v3 crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ resolver = "2"
 edition = "2021"
 
 [workspace.dependencies]
-solana-sdk = "2"
-solana-client = "2"
-solana-account-decoder = "2"
+solana-account-decoder = "3"
+solana-client = "3"
+solana-instruction = "3"
+solana-pubkey = "3"
