--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -7,6 +7,8 @@ edition = { workspace = true }
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 jupiter-swap-api-client = { path = "../jupiter-swap-api-client" }
-solana-sdk = { workspace = true }
 solana-client = { workspace = true }
+solana-pubkey = { workspace = true }
+solana-signer = "3"
+solana-transaction = "3"
 bincode = "1.3.3"
