--- a/jupiter-swap-api-client/Cargo.toml
+++ b/jupiter-swap-api-client/Cargo.toml
@@ -9,7 +9,8 @@ edition = { workspace = true }
 anyhow = "1"
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
-solana-sdk = { workspace = true }
+solana-pubkey = { workspace = true }
+solana-instruction = { workspace = true }
 solana-account-decoder = { workspace = true }
 thiserror = "2"
 base64 = "0.22.1"
