--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ members = [
 edition = "2021"
 
 [workspace.dependencies]
-solana-sdk = "~2"
-solana-client = "~2"
-solana-account-decoder = "~2"
+
+solana-client = { version = "3.1.1" }
+solana-account-decoder = "3.1.1"
+
+solana-sdk = { version = "3.0.0" }
